--- a/S2_05_MAY_86cyt462d/jobboardx/client/package.json
+++ b/S2_05_MAY_86cyt462d/jobboardx/client/package.json
@@ -15,10 +15,13 @@
     "@mui/material": "^7.0.2",
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
+    "dotenv": "^16.5.0",
     "formik": "^2.4.6",
     "framer-motion": "^12.9.4",
     "lucide-react": "^0.507.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.30.0",
     "recharts": "^2.15.3",
