--- a/S2_05_MAY_86cyt462d/jobboardx/server/package.json
+++ b/S2_05_MAY_86cyt462d/jobboardx/server/package.json
@@ -12,13 +12,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
-    "nodemailer": "^6.10.1"
+    "natural": "^8.0.1",
+    "nodemailer": "^6.10.1",
+    "openai": "^4.102.0"
   },
   "devDependencies": {
     "@types/node": "^22.15.2",
