--- a/S2_05_MAY_86cyt462d/jobboardx/client/package.json
+++ b/S2_05_MAY_86cyt462d/jobboardx/client/package.json
@@ -13,9 +13,11 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.0.2",
+    "@mui/x-date-pickers": "^8.5.0",
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "formik": "^2.4.6",
     "framer-motion": "^12.9.4",
@@ -25,7 +27,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.30.0",
     "recharts": "^2.15.3",
-    "styled-components": "^6.1.17",
+    "styled-components": "^6.1.18",
     "tailwindcss": "^4.1.4",
     "yup": "^1.6.1"
   },
